intro_project/grammar.txt
TKOM gramatyka

program 		= { statement }, "EOF" ;

statement 		= stmt_with_ident,
					| if_statement
					| while_loop
					| for_loop
					| return_statement
					| block ;

stmt_with_ident 	= identifier, ( assignment | call_stmt ), ";" ;
assignment 			= ( "=" | "+=" | "-=" ), expression ;
call_stmt			= { access_suff | call_suff }, call_suff ;

access_suff 		= ".", identifier ;
call_suff			= "(", [ argument_list ], ")"

if_statement 		= "if", "(", expression, ")", block, { elif }, [ "else", block ] ;
elif 				= "elif", "(", expression, ")", block ;

while_loop 			= "while", "(", expression, ")", block ;
for_loop 			= "for", identifier, "in", expression, block ;
return_statement	= "return", [ expression ], ";" ;
block 				= "{", { statement }, "}" ;

expression		= logic_or ;
logic_or		= logic_and, { "or", logic_and } ;
logic_and		= equality, { "and", equality } ;
equality		= comparison, { ("==" | "!="), comparison } ;
comparison		= additive, { (">" | ">=" | "<" | "<="), additive } ;
additive		= multiplicative, { ("+" | "-"), multiplicative } ;
multiplicative	= unary, { ( "*" | "/" ), unary } ;
unary			= { ("!" | "-") }, postfix ;
postfix			= primary, { call_suff | member_suff} ;

primary			= integer
					| float
					| string
					| "True" | "False"
					| identifier
					| list_literal
					| dict_literal
					| func_literal
					| linq_query
					| item_literal_or_parenthisis

list_literal	= "[", [ expression, { ",", expression } ] "]" ;
dict_literal	= "{", [ item_literal, { ",", item_literal } ], "}" ;
func_literal    = "function", "(", [ identifier_list ], ")", block ;

linq_query		= "from", identifier, "in", expression,
					"select", expression, { ",", expression }
					[ "where", expression ],
					[ "order", "by", expression, [ "descending" ] ] ;

item_literal_or_parenthisis = "(", expression, ( item_literal_tail | ")" ) ;
item_literal 				= "(", expression, item_literal_tail ;
item_literal_tail 			= ":", expression, ")" ;

identifier_list = identifier, { ",", identifier } ;
argument_list	= [ expression, { ",", expression } ] ;

integer 		= "0" | ( digit-positive , { digit } ) ;
float			= integer, ".", integer ;
string			= '"', { unicode_symbol }, '"' ;
identifier		= letter, { alphanumeric } ;

unicode_symbol 	= { *symbole UNICODE* } ;
letter			= { *litery* } ;
alphanumeric	= letter | digit | "_" ;

comment-endline = "//", { unicode_symbol }, "\n";
comment-inline 	= "/*", { unicode_symbol }, "*/";

digit-positive 	= "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9";
digit 			= "0" | digit-positive;
